@@ -3,7 +3,7 @@ import java.time.LocalDateTime
 plugins {
     id 'application'
     id 'maven-publish'
-    id 'edu.sc.seis.launch4j' version '2.5.1'
+    id 'edu.sc.seis.launch4j' version '2.5.4'
     id 'jacoco'
 }
 
@@ -27,27 +27,26 @@ sourceSets {
 }
 
 dependencies {
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
-    implementation 'com.formdev:flatlaf:2.0.2'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.1'
+    implementation 'com.formdev:flatlaf:2.6'
     implementation 'com.github.ikkisoft:SerialKiller:master-SNAPSHOT'
     implementation 'com.sun.mail:jakarta.mail:2.0.1'
-    implementation 'com.thoughtworks.xstream:xstream:1.4.14'
-    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
-    implementation 'org.apache.commons:commons-text:1.9'
-    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
+    implementation 'com.thoughtworks.xstream:xstream:1.4.19'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
+    implementation 'org.apache.commons:commons-text:1.10.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
     implementation 'org.freemarker:freemarker:2.3.31'
 
-    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
+    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.1'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    testImplementation 'org.junit.vintage:junit-vintage-engine:5.8.2'
-    testImplementation 'org.mockito:mockito-core:4.3.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
+    testImplementation 'org.mockito:mockito-core:4.10.0'
 }
 
 mainClassName = 'megamek.MegaMek'
 
 ext {
-    mmJvmOptions = ['-Xmx2048m']
+    mmJvmOptions = ['-Xmx2048m', '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED']
     data = 'data'
     unitFiles = "${data}/mechfiles"
     rats = "${data}/rat"
@@ -65,12 +64,17 @@ ext {
     scriptTemplate = "${scriptsDir}/startScriptTemplate.txt"
 }
 
+run {
+    jvmArgs = mmJvmOptions
+}
+
 jar {
     archiveFileName = 'MegaMek.jar'
     manifest {
         attributes "Main-Class" : mainClassName
         attributes "Class-Path" : project.sourceSets.main.runtimeClasspath.files
             .findAll { it.name.endsWith(".jar") }.collect { "${lib}/${it.name}" }.join(' ')
+        attributes "Add-Opens" : 'java.base/java.util java.base/java.util.concurrent'
         attributes "Build-Date" : LocalDateTime.now()
     }
 }
@@ -79,7 +83,7 @@ task officialUnitList(type: JavaExec, dependsOn: jar) {
     description = 'Compiles a list of all units that come from official sources and saves it in the docs folder.'
     group = 'build'
     classpath = sourceSets.main.runtimeClasspath
-    main = 'megamek.MegaMek'
+    mainClass = 'megamek.MegaMek'
     args '-oul'
     inputs.dir "${projectDir}/${unitFiles}"
     outputs.file "${fileStagingDir}/docs/OfficialUnitList.txt"
@@ -89,7 +93,7 @@ task equipmentList(type: JavaExec, dependsOn: jar) {
     description = 'Generate current equipment.txt'
     group = 'build'
     classpath = sourceSets.main.runtimeClasspath
-    main = 'megamek.MegaMek'
+    mainClass = 'megamek.MegaMek'
     args = [ '-eqdb', 'docs/equipment.txt' ]
     inputs.files sourceSets.main.allJava
     outputs.file "${fileStagingDir}/docs/equipment.txt"
@@ -125,7 +129,7 @@ task copyFiles(type: Copy) {
 task createImageAtlases(type: JavaExec, dependsOn: copyFiles) {
     description = 'Combines individual image files into a set of image atlases.'
     classpath = sourceSets.main.runtimeClasspath
-    main = "megamek.utils.CreateImageAtlases"
+    mainClass = "megamek.utilities.CreateImageAtlases"
     workingDir = file(fileStagingDir)
     inputs.dir "${projectDir}/${data}/images/units"
     outputs.dir "${fileStagingDir}/${data}/images/units"
@@ -181,7 +185,7 @@ task stageFiles {
 task createStartScripts (type: CreateStartScripts) {
     description = 'Create shell script for generic distribution.'
     applicationName = 'mm'
-    mainClassName = project.mainClassName
+    mainClass = project.mainClassName
     outputDir = startScripts.outputDir
     classpath = jar.outputs.files + files(project.sourceSets.main.runtimeClasspath.files)
             .filter { it.name.endsWith(".jar") }
@@ -237,13 +241,12 @@ createExe {
     mainClassName = project.mainClassName
     outfile = 'MegaMek.exe'
     icon = "${projectDir}/data/images/misc/megamek.ico"
-    def inifile = outfile.replace('.exe', '.l4j.ini')
+    def iniFile = outfile.replace('.exe', '.l4j.ini')
     jar = "${project.tasks.getByName("jar").archiveFile.get()}"
-    inputs.file  jar
     outputs.file "${buildDir}/launch4j/${outfile}"
-    outputs.file "${buildDir}/launch4j/${inifile}"
+    outputs.file "${buildDir}/launch4j/${iniFile}"
     doLast {
-        new File("${buildDir}/${outputDir}/${inifile}").text = """# Launch4j runtime config
+        new File("${buildDir}/${outputDir}/${iniFile}").text = """# Launch4j runtime config
 # you can add arguments here that will be processed by the JVM at runtime
 ${project.ext.mmJvmOptions.join('\n')}
 """        
@@ -318,7 +321,6 @@ task buildFromRepo (type: GradleBuild) {
     group = 'distribution'
     dependsOn cloneMMRepo
     
-    buildFile = "${mmRepoDir}/build.gradle"
     dir = "${mmRepoDir}"
     tasks = [ ':megamek:assembleDist' ]
 }
@@ -355,7 +357,7 @@ publishing {
             pom {
                 name = "MegaMek"
                 description = "MegaMek"
-                url = "http://megamek.org"
+                url = "https://megamek.org"
                 licenses {
                     license {
                         name = "GNU General Public License, version 2"
@@ -379,6 +381,7 @@ task cleanPublishingDir (type: Delete) {
 publishPublishMMLibraryPublicationToMavenRepository.dependsOn cleanPublishingDir
 
 test {
+    useJUnitPlatform()
     // report is always generated after tests run
     finalizedBy jacocoTestReport
 }
@@ -387,7 +390,7 @@ jacocoTestReport {
     // tests are required to run before generating the report
     dependsOn test
     reports {
-        xml.enabled true
-        html.enabled true
+        xml.required = true
+        html.required = true
     }
 }
